--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>England, London</p>
 <h2>Education</h2>
 <p>Degree in IT security and forensics</p>
-<h2>Industry</h2><
+<h2>Industry</h2>
 <p>IT Support</p>
 <h2>Recent Projects</h2>
 <p>Does this count? Or the capstone project</p>
